--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vue-patternfly/core",
-  "version": "0.1.0-beta.30",
+  "version": "5.0.0",
   "type": "module",
   "files": [
     "dist"
@@ -41,25 +41,25 @@
     "@vue-patternfly/icons": "workspace:^"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.14.1",
     "@types/web-bluetooth": "^0.0.21",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/compiler-sfc": "^3.5.13",
-    "@vueuse/core": "^13.0.0",
-    "@vueuse/integrations": "^13.0.0",
-    "@vueuse/shared": "^13.0.0",
+    "@vueuse/core": "^13.1.0",
+    "@vueuse/integrations": "^13.1.0",
+    "@vueuse/shared": "^13.1.0",
     "concurrently": "^9.1.2",
     "focus-trap": "^7.6.4",
     "fs-extra": "^11.3.0",
     "glob": "^11.0.1",
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.10",
     "rimraf": "^6.0.1",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
-    "vite": "^6.2.5",
+    "vite": "^6.3.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-tsc": "^2.2.8"
+    "vue-tsc": "^2.2.10"
   },
   "peerDependencies": {
     "@vueuse/core": "^13",
