--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,7 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
+    "allowImportingTsExtensions": null,
     "assumeChangesOnlyAffectDirectDependencies": true,
     "noEmit": false,
     "lib": [
