--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@vue-patternfly/icons",
-  "version": "0.4.3",
+  "version": "5.0.0",
   "exports": {
     ".": {
+      "types": "./dist/esm/index.d.ts",
       "import": "./dist/esm/index.js",
-      "require": "./dist/js/index.js",
-      "types": "./dist/esm/index.d.ts"
+      "require": "./dist/js/index.js"
     },
     "./*": {
+      "types": "./dist/esm/icons/*.d.ts",
       "import": "./dist/esm/icons/*.js",
-      "require": "./dist/js/icons/*.js",
-      "types": "./dist/esm/icons/*.d.ts"
+      "require": "./dist/js/icons/*.js"
     }
   },
   "sideEffects": false,
@@ -40,5 +40,5 @@
   "peerDependencies": {
     "vue": "^3.2.40"
   },
-  "packageManager": "pnpm@8.6.1"
+  "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f"
 }
