--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@vue-patternfly/table",
-  "version": "0.2.4",
+  "version": "5.0.0",
   "type": "module",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.cjs"
     },
     "./*": {
+      "types": "./dist/*.d.ts",
       "import": "./dist/*.js",
-      "require": "./dist/*.cjs",
-      "types": "./dist/*.d.ts"
+      "require": "./dist/*.cjs"
     },
     "./style.css": "./dist/style.css"
   },
