--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,25 +2,27 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - master
+      - v5
+
 jobs:
   build-and-deploy:
     concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 22
 
       - run: npm install --global pnpm
       - run: pnpm install
       - run: pnpm build
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4.7.3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: apps/docs/dist
+          target-folder: v5
